--- a/ContactUs.html
+++ b/ContactUs.html
@@ -10,7 +10,7 @@
     <div class="helpagain">
         <header>
      <form action="mailto:maireadhegarty@gmail.com"method="post" enctype="text/plain">
-           <h1>Contact Us</h1>
+           <h3>Contact Us</h3>
             <p>
                 <label class="firstname" >First Name:</label>
                 <input type="text" name="firstname" size="40" maxlength="40" />
@@ -24,7 +24,8 @@
         </p>
          <p>
          <select name="level">
-                <option>Skill Level</option>
+                
+                <option>Skill Level<i class="fa fa-bars" aria-hidden="true"></i></option>
                 <option>Beginner</option>
                 <option>Novice</option>
                 <option>Experienced 10k</option>
