--- a/AboutUs.html
+++ b/AboutUs.html
@@ -20,9 +20,9 @@
                             <li id="formSearch" input type="text" name="search" placeholder="Search.." ><i class="fa fa-search" aria-hidden="true"></i></li>
                             <li><a href="ContactUs.html">Contact Us</a></li>
                             <li><a href="louisburgh.html">Louisburgh</a></li>
-                            <li><a href="TheCourse.html">The Course</a></li>                            
+                            <li><a href="TheCourse.html">The Course</a></li>                          
                             <li>About Us</li>
-                            <li><a href="Index.html">Home</a></li> 
+                            <li><a href="index.html">Home</a></li> 
 
 
                         </ul>
@@ -58,7 +58,7 @@
             
             <a class="iconallpages" href="index.html">Home</a>
             <a class="icon">About Us</a>
-            <a class="iconallpages" href="thecourse.html">The Course</a>
+            <a class="iconallpages" href="TheCourse.html">The Course</a>
             <a class="iconallpages" href="louisburgh.html">Stay in Louisburgh</a>
             <a class="iconallpages" href="ContactUs.html">Contact Us</a>
             <a class="icon1" href="https://www.popupraces.ie/events/louisburgh-clew-bay-half-marathon-and-10k/">Register Now!</a>
