--- a/Accommodation.html
+++ b/Accommodation.html
@@ -78,7 +78,7 @@
             </div> 
                     
           
-            <div id=icons>
+            <div class="icons">
             <a class="iconallpages" href="index.html">Home</a>
             <a class="iconallpages" href="transport.html">Getting Here</a>
             <a class="iconallpages">Sleeping</a>
