--- a/sitemap.html
+++ b/sitemap.html
@@ -34,7 +34,7 @@
                         <li><a href="Dining.html">Dining</a></li>
                         <li><a href="thingstodo.html">What to do</a></li>
                             <ul>
-                               <li><a href="activities.html">Activities></li>
+                               <li><a href="activities.html">Activities</li>
                                 <li><a href="historical.html">Historical</a></li>
                             </ul>
                         
