--- a/TheCourse.html
+++ b/TheCourse.html
@@ -22,7 +22,7 @@
                             <li><a href="louisburgh.html">Louisburgh</a></li>
                             <li>The Course</li>                            
                             <li><a href="AboutUs.html">About Us</a></li>
-                            <li><a href="Index.html">Home</a></li> 
+                            <li><a href="index.html">Home</a></li> 
 
 
                         </ul>
