--- a/louisburgh.html
+++ b/louisburgh.html
@@ -58,7 +58,7 @@
             <a class="iconallpages" href="transport.html">Getting Here</a>
             <a class="iconallpages" href="Accommodation.html">Sleeping</a>
             <a class="iconallpages" href="Dining.html">Dining</a>
-            <a class="iconallpages" href="thingstodo.html">Activities</a>
+            <a class="iconallpages" href="ThingsToDo.html">Activities</a>
             <a class="icon1" href="https://www.popupraces.ie/events/louisburgh-clew-bay-half-marathon-and-10k/">Register Now!</a>
     
            
