--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
          <div class="details">
             <pre>
             <p>                    <span class="start"><a href="http://www.athleticsireland.ie/">AAI Accredited Half-Marathon</a  >                           <span class ="large"><a href="http://sportstiming.ie">Chip timing</a></span>                                  <a href="http://www.athleticsireland.ie/">AAI Accredited 10k</a></span></p>
-            <p>                            <span class="start">T-Shirt & Medal For all Participants                                      <i class="fa fa-trophy" aria-hidden="true"></i> <a href="aboutus.html">Multiple prize categories & very generous prizes</a></span>          </p>
+            <p>                            <span class="start">T-Shirt & Medal For all Participants                                      <i class="fa fa-trophy" aria-hidden="true"></i> <a href="AboutUs.html">Multiple prize categories & very generous prizes</a></span>          </p>
           </pre>   
         
        </div>
