--- a/transport.html
+++ b/transport.html
@@ -22,7 +22,7 @@
                             <li><a href="louisburgh.html">Louisburgh</a></li>
                             <li><a href="TheCourse.html">The Course</a></li>                         
                             <li><a href="AboutUs.html">About Us</a></li>
-                            <li><a href="Index.html">Home</a></li> 
+                            <li><a href="index.html">Home</a></li> 
 
 
                         </ul>
@@ -88,9 +88,9 @@
             <div class="icons">
             <a class="iconallpages" href="index.html">Home</a>
             <a class="iconallpages">Getting Here</a>
-            <a class="iconallpages" href="accommodation.html">Sleeping</a>
+            <a class="iconallpages" href="Accommodation.html">Sleeping</a>
             <a class="iconallpages" href="Dining.html">Dining</a>
-            <a class="iconallpages" href="activities.html">Activities</a>
+            <a class="iconallpages" href="thingstodo.html">Activities</a>
             <a class="icon1" href="https://www.popupraces.ie/events/louisburgh-clew-bay-half-marathon-and-10k/">Register Now!</a>
     
            
