--- a/ContactUs.html
+++ b/ContactUs.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-        <title>contactus.html</title>
+        <title>ContactUs.html</title>
         <link rel="stylesheet" type="text/css" href="css/styles.css">
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
@@ -23,7 +23,7 @@
                             <li><a href="louisburgh.html">Louisburgh</a></li>
                             <li><a href="TheCourse.html">The Course</a></li>                         
                             <li><a href="AboutUs.html">About Us</a></li>
-                            <li><a href="Index.html">Home</a></li> 
+                            <li><a href="index.html">Home</a></li> 
 
 
                         </ul>
