--- a/ThingsToDo.html
+++ b/ThingsToDo.html
@@ -24,7 +24,7 @@
                             <li><a href="louisburgh.html">Louisburgh</a></li>
                             <li><a href="TheCourse.html">The Course</a></li>                         
                             <li><a href="AboutUs.html">About Us</a></li>
-                            <li><a href="Index.html">Home</a></li> 
+                            <li><a href="index.html">Home</a></li> 
 
                         </ul>
                 </nav>
